<resources>
    <string name="app_name">플리오마켓</string>
    <string name="kakao_app_key">09b99188fe74123e3d34d124c992695c</string>
    <string name="nav_home">홈</string>
    <string name="nav_search">검색</string>
    <string name="nav_write">글쓰기</string>
    <string name="nav_channel">채널/알림</string>
    <string name="nav_favorite">관심상품</string>

    <string name="category_entire">전체</string>
    <string name="category_speaker">스피커</string>
    <string name="category_mike">마이크</string>
    <string name="category_cable">케이블</string>
    <string name="category_amp">앰프</string>
    <string name="category_source">소스기기</string>
    <string name="category_headset">이어폰/헤드폰</string>
    <string name="category_headset_home">헤드폰</string>
    <string name="category_acoustic">음향장비</string>
    <string name="category_record">음반</string>
    <string name="category_accessory">악세사리</string>
    <string name="category_diy">DIY</string>

    <string name="category_speaker_pc_fi">PC-FI</string>
    <string name="category_speaker_head_fi">Head-Fi</string>
    <string name="category_speaker_hi_fi">HiFi</string>
    <string name="category_speaker_pro">Pro</string>
    <string name="category_speaker_bluetooth">Bluetooth</string>
    <string name="category_speaker_ai">AI</string>

    <string name="category_mike_wire">유선마이크</string>
    <string name="category_mike_wireless">무선마이크</string>
    <string name="category_mike_pin">핀마이크</string>

    <string name="category_cable_speaker">스피커케이블</string>
    <string name="category_cable_inter">인터케이블</string>
    <string name="category_cable_digital">디지털케이블</string>
    <string name="category_cable_power">파워케이블</string>

    <string name="category_apm_power">파워앰프</string>
    <string name="category_apm_pre">프리앰프</string>
    <string name="category_apm_phono">포노앰프</string>
    <string name="category_apm_dap">DAP</string>
    <string name="category_apm_etc">기타앰프</string>
    <string name="category_apm_portable">휴대용앰프</string>

    <string name="category_source_lp">LP</string>
    <string name="category_source_cdp">CDP</string>
    <string name="category_source_tuner">튜너</string>
    <string name="category_source_cartridge">카트리지</string>
    <string name="category_source_earphone">이어폰</string>

    <string name="category_headset_earphone_wire">유선이어폰</string>
    <string name="category_headset_earphone_bluetooth">블루투스 이어폰</string>
    <string name="category_headset_headphone_wire">유선헤드폰</string>
    <string name="category_headset_headphone_bluetooth">블루투스 헤드폰</string>
    <string name="category_headset_headphone_monitoring">모니터링 헤드폰</string>

    <string name="category_acoustic_mixer">믹서</string>
    <string name="category_acoustic_effector">이펙터</string>
    <string name="category_acoustic_dac">DAC</string>
    <string name="category_acoustic_word_clock">워드클락</string>

    <string name="category_record_lp">LP</string>
    <string name="category_record_cd">CD</string>

    <string name="category_accessory_spike">스파이크</string>
    <string name="category_accessory_stand">스탠드</string>
    <string name="category_accessory_rack">랙장</string>
    <string name="category_accessory_plate">음향판</string>

    <string name="category_diy_instrument">악기</string>
    <string name="category_diy_unit">유닛</string>
    <string name="category_diy_terminal">단자</string>

    <string name="category_news">플리오 컬럼</string>
    <string name="category_certificate">플리오 인증</string>
    <string name="category_event">홍보/행사</string>

    <string name="category_news_entire">전체</string>
    <string name="category_news_professional">Professional</string>
    <string name="category_news_hi_fi">HiFi</string>
    <string name="category_news_headphone">HeadPhone</string>
    <string name="category_news_ar_vr">AR/VR</string>

    <string name="category_certificate_entire">전체</string>
    <string name="category_certificate_my_flio">MY플리오</string>
    <string name="category_certificate_review">오디오리뷰</string>
    <string name="category_certificate_deal">거래인증</string>

    <string name="category_event_entire">전체</string>
    <string name="category_event_seminar">세미나/강좌</string>
    <string name="category_event_session">청음회</string>
    <string name="category_event_job">구인구직</string>
    <string name="category_event_etc">기타</string>

    <string name="intro_description">‘ 영화를 더 생생하게 ’ 감상하고 싶은데\n어떤 스피커가 좋을까?</string>

    <string name="header_recommend_product">추천 매물</string>
    <string name="header_related_news">관련 뉴스</string>
    <string name="header_certificated">플리오 인증</string>

    <string name="description_item_recommend">recommend</string>
    <string name="my_page_label_keyword">관심 키워드</string>
    <string name="my_page_product_sell">판매내역</string>
    <string name="my_page_product_buy">구매내역</string>
    <string name="my_page_product_favorite">관심목록</string>
    <string name="my_page_board">게시글</string>
    <string name="my_page_promotion">홍보인증</string>

    <string name="product_sell">거래중</string>
    <string name="product_sell_closed">거래완료</string>
    <string name="product_sell_cancel">거래취소</string>

    <string name="product_sell_change_reserve">예약중으로 변경</string>
    <string name="product_sell_change_close">거래완료로 변경</string>
    <string name="product_sell_change_cancel">거래취소로 변경</string>
    <string name="product_sell_view_review"> 구매자 후기 보기</string>

    <string name="product_buy_review_write">후기 작성하기</string>
    <string name="product_buy_review_write_title">구매자 후기 작성하기</string>
    <string name="product_buy_review_write_message">%s님과의 거래가 어떠셨나요?</string>
    <string name="product_buy_review_write_confirm">확인</string>


    <string name="search_popular">인기검색어</string>
    <string name="search_hint">검색어를 입력해주세요.</string>
    <string name="search_label_recent">최근검색어</string>
    <string name="search_delete_all">전체삭제</string>
    <string name="search_description">플리오가 추천하는, <font color='#6F5AFF'>오디오</font></string>

    <string name="setting_title">설정</string>
    <string name="setting_notification_entire">전체 알림</string>
    <string name="setting_notification_chat">채팅 알림</string>
    <string name="setting_notification_reply">댓글 알림</string>
    <string name="setting_notification_keyword">키워드 알림</string>
    <string name="setting_delete_cache">캐시 데이터 삭제하기</string>
    <string name="setting_delete_cache_completed">캐시데이터 삭제 완료</string>
    <string name="setting_version_info">버전정보</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_logout_message">로그아웃 하시겠습니까?</string>
    <string name="setting_sign_out">탈퇴하기</string>
    <string name="setting_notice">플리오 공지</string>
    <string name="setting_privacy">개인정보 처리방침</string>
    <string name="setting_register_keyword">등록</string>
    <string name="setting_register_keyword_registered">등록된 키워드</string>

    <string name="bottom_sheet_write_market">장터글쓰기</string>
    <string name="bottom_sheet_write_certificate">인증글쓰기</string>
    <string name="bottom_sheet_write_event">행사글쓰기</string>
    <string name="bottom_sheet_write_hint">게시글을 작성할 수 있어요.</string>

    <string name="write_thumbnail_count_label">/10</string>

    <string name="menu_item_done_title">완료</string>
    <string name="menu_item_setting_title">설정</string>
    <string name="menu_item_search_title">검색</string>
    <string name="menu_item_bookmark_title">즐겨찾기</string>

    <string name="message_max_count">10개까지 선택 가능합니다.</string>
    <string name="message_already_registered">이미 추가된 키워드입니다.</string>

    <string name="title_sell_list">판매내역</string>
    <string name="title_buy_list">구매내역</string>

    <string name="product_status">+제품상태보기</string>
    <string name="product_link"> 사이트이동</string>
    <string name="product_chat">1:1채팅하기</string>

    <string name="product_detail_title">제품 상태보기</string>
    <string name="product_detail_use_date">사용기간</string>
    <string name="product_detail_box_yn">박스유무</string>
    <string name="product_detail_purchase_kind">구매방법</string>
    <string name="product_detail_repair_yn">수리이력</string>
    <string name="product_detail_basic_info">기본정보</string>
    <string name="product_detail_brand">브랜드</string>
    <string name="product_detail_brand_hint">브랜드를 입력해주세요.</string>
    <string name="product_detail_model">모델명</string>
    <string name="product_detail_serial">시리얼</string>
    <string name="product_detail_model_hint">모델명을 입력해주세요.</string>
    <string name="product_detail_serial_hint">시리얼번호를 입력해주세요.</string>
    <string name="product_detail_repair_comment_hint">수리o체크 활성화 수리 부위 서술</string>
    <string name="product_detail_url_hint">제품 상세 페이지 URL</string>
    <string name="product_detail_btn_register">입력</string>
    <string name="product_detail_btn_complement">확인</string>
    <string name="favorite_go_market">장터 가기</string>

    <string name="product_register">장터글쓰기</string>
    <string name="product_register_title_hint">*제목</string>
    <string name="product_register_category">*카테고리 분류</string>
    <string name="product_register_purpose">용도선택</string>
    <string name="product_register_price">*₩ 가격 입력(선택사항)</string>
    <string name="product_register_state">상세 정보</string>
    <string name="product_register_way">거래방법</string>
    <string name="product_register_way_direct">직거래</string>
    <string name="product_register_way_delivery">택배거래</string>
    <string name="product_register_tag">*태그 입력시 브랜드/모델명으로 입력 *(표기)</string>
    <string name="product_register_message_hint">*게시글 내용을 작성해주세요.</string>

    <string name="product_register_category_title">카테고리</string>

    <string name="product_register_detail_title">제품 상세 정보</string>
    <string name="product_register_porpose_title">용도</string>
    <string name="product_register_porpose_description">주로 사용하는 용도 선택</string>
    <string name="product_register_porpose_description2">* 용도를 작성하면 검색어 노출에 유리합니다</string>

    <string name="product_register_tag_title">태그입력</string>
    <string name="product_register_tag_hint">#태그를 입력해주세요. (최대 5개)</string>
    <string name="product_register_tag_description">- 그 외 태그는 최대 5개까지 입력할 수 있습니다.\n- 각 태그는 최대 10자까지 입력할 수 있습니다.\n 판매하는 상품과 연관없는 태그 입력시 제재를 받을 수 있습니다.</string>

    <string name="transition_product_image">transition_product_image_%d</string>
    <string name="transition_product_flio">transition_product_flio_%d</string>
    <string name="transition_product_faith">transition_product_faith_%d</string>

    <string name="title_my_page">마이페이지</string>

    <string name="profile_title">프로필</string>
    <string name="profile_evaluate">평가하기</string>
    <string name="profile_chat">대화하기</string>
    <string name="profile_all">모아보기</string>
    <string name="profile_product">판매중인 상품</string>
    <string name="profile_review">구매후기 보기</string>
    <string name="profile_board">게시글 보기</string>

    <string name="buyer_guide_title">구매자 선택</string>

    <string name="intro_msg_denied">이 서비스를 사용하기 위해서 권한이 필요합니다.</string>
    <string name="intro_msg_goto_setting">설정하러 가기</string>

    <string name="favorite_product_empty">관심있는 매물을 선별해주세요.</string>
    <string name="ready">준비중입니다.</string>
    <string name="market_product_empty">등록된 상품이 없습니다.</string>


</resources>