<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_write"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_write" />

    <item
        android:id="@+id/nav_channel"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_channel" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/nav_favorite" />

</menu>