<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.fund.flio.ui.main.mypage.setting.SettingViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="설정">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_all"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/setting_notification_entire"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_chat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/setting_notification_chat"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:clickable="false"
            android:text="@string/setting_notification_reply"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:clickable="false"
            android:text="@string/setting_notification_keyword"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayF8"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:text="@string/setting_delete_cache"
            android:textColor="@color/black3"
            android:onClick="@{v -> viewModel.deleteCache(v)}"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:onClick="@{v -> viewModel.privacy(v)}"
            android:text="@string/setting_privacy"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:text="@string/setting_notice"
            android:onClick="@{v -> viewModel.notice(v)}"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"

                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/setting_version_info"
                android:textColor="@color/black3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@{viewModel.version}"
                android:textColor="@color/black3"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:onClick="@{v -> viewModel.showLogout(v)}"
            android:text="@string/setting_logout"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:onClick="@{v -> viewModel.signOut(v)}"
            android:text="@string/setting_sign_out"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:background="@color/grayDBCECE"
            app:layout_constraintBottom_toBottomOf="@id/tabs" />


    </LinearLayout>


</layout>