<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="purpose"
            type="com.fund.flio.data.enums.Purpose" />

        <variable
            name="viewModel"
            type="com.fund.flio.ui.main.market.register.ProductRegisterViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/product_register_tag_title"
                android:textColor="@color/black0"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayD"
            app:layout_constraintBottom_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/product_register_tag_hint"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@color/grayF8"
            android:padding="16dp"
            android:text="@string/product_register_tag_description"
            android:textColor="@color/black3"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/input" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
