<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.fund.flio.ui.main.profile.ProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile_title"
                android:textColor="@color/black0"
                android:textSize="24sp" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:imageUrlCircle="@{viewModel.sellerImage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.sellerName}"
            android:textColor="@color/purple"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:progressTint="@color/purple"
            android:rating="@{Float.parseFloat(viewModel.rating)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/evaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableTop="@drawable/profile_evaluate"
            android:drawablePadding="16dp"
            android:text="@string/profile_evaluate"
            android:textColor="@color/black3"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/chat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <TextView
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableTop="@drawable/profile_chat"
            android:drawablePadding="16dp"
            android:text="@string/profile_chat"
            android:textColor="@color/black3"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/all"
            app:layout_constraintStart_toEndOf="@id/evaluate"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableTop="@drawable/profile_all"
            android:drawablePadding="16dp"
            android:text="@string/profile_all"
            android:textColor="@color/black3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/chat"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <View
            android:id="@+id/divider_product"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/grayD"
            app:layout_constraintBottom_toTopOf="@id/divider_review"
            app:layout_constraintTop_toBottomOf="@id/evaluate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:drawableEnd="@drawable/profile_arrow_gray"
            android:gravity="center_vertical"
            android:text="@string/profile_product"
            android:textColor="@color/black3"
            android:textSize="14sp"
            android:onClick="@{v -> viewModel.showProduct(v)"
            app:layout_constraintBottom_toTopOf="@id/divider_review"
            app:layout_constraintTop_toBottomOf="@id/divider_product" />

        <View
            android:id="@+id/divider_review"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="54dp"
            android:background="@color/grayD"
            app:layout_constraintBottom_toTopOf="@id/divider_board"
            app:layout_constraintTop_toBottomOf="@id/divider_product" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:drawableEnd="@drawable/profile_arrow_gray"
            android:gravity="center_vertical"
            android:text="@string/profile_review"
            android:textColor="@color/black3"
            android:textSize="14sp"
            android:onClick="@{v -> viewModel.showReview(v)"
            app:layout_constraintBottom_toTopOf="@id/divider_board"
            app:layout_constraintTop_toBottomOf="@id/divider_review" />

        <View
            android:id="@+id/divider_board"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="54dp"
            android:background="@color/grayD"
            app:layout_constraintBottom_toTopOf="@id/divider_dummy"
            app:layout_constraintTop_toBottomOf="@id/divider_review" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:drawableEnd="@drawable/profile_arrow_gray"
            android:gravity="center_vertical"
            android:text="@string/profile_board"
            android:onClick="@{v -> viewModel.showBoard(v)"
            android:textColor="@color/black3"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/divider_dummy"
            app:layout_constraintTop_toBottomOf="@id/divider_board" />

        <View
            android:id="@+id/divider_dummy"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="54dp"
            android:background="@color/grayD"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/divider_board" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>